--- a/requirements.txt
+++ b/requirements.txt
@@ -15,11 +15,13 @@ django-cors-headers==4.3.1
 djangorestframework==3.14.0
 djangorestframework-simplejwt==5.3.1
 fonttools==4.53.0
+gunicorn==23.0.0
 html2pdf==0.1
 html5lib==1.1
 idna==3.7
 lxml==5.2.2
 oscrypto==1.3.0
+packaging==24.2
 pillow==10.3.0
 pycparser==2.22
 pydyf==0.10.0
